# cpp_numerical_calculation

./: CMakeLists.txt  README.md
01_Gauss/: main.cpp
01_accuracy_stability/: 1_4_rounding_error.cpp  1_6_truncation_error.cpp  1_7_Instability.cpp
02_linear_equation/: 2_4_select_all_gauss.cpp  2_5_gauss_jordan.cpp  2_6_gauss_jordan_inverse_matrix.cpp  2_7_gauss_seidel.cpp  2_8_relaxation_gauss_seidel.cpp  3_4_sequence_gauss.cpp  3_5_select_all_gauss.cpp  CMakeLists.txt
03_nolinear_equation/: 3_1_bisection_method.cpp  3_2_trial_position_method.cpp  3_3_newton-raphson.cpp  3_4_nr_nolinear_equations.cpp  3_5_Graeffe.cpp
04_matrix/: 01_Faddeev_leverrier.cpp
05_discrete_equation/: Co.ipynb  courant.py  equation-discretization.cpp  one-dimensional-convection.ipynb  one-dimensional-convection.py  test.ipynb  test1.ipynb
06＿finite_volume_method/: 01_triangel.cpp  CMakeLists.txt  test.cpp
07_diffusion_term/: 01_heat_conduction_rod.cpp  01_heat_conduction_rod.md  01_heat_conduction_rod_copy.cpp  CMakeLists.txt
test/: courant.py  main.cpp  one-dimensional-convection.ipynb  one-dimensional-convection.py
